--- a/files/galaxy/dynamic_rules/usegalaxy/total_perspective_vortex/destinations.yml
+++ b/files/galaxy/dynamic_rules/usegalaxy/total_perspective_vortex/destinations.yml
@@ -1,6 +1,7 @@
 ---
 # ALL tags must be with dashes (-) instead of underscores (_)
 destinations:
+  # trigger ci
   interactive_pulsar:
     runner: pulsar_embedded
     destination_name_override: "embedded_pulsar_interactive_c{cores}-m{mem}"
