--- a/.github/workflows/tpv.yml
+++ b/.github/workflows/tpv.yml
@@ -28,6 +28,22 @@ jobs:
           python-version: '3.x'
           cache: 'pip'
 
+      # Install Ansible.
+      - name: Cache Ansible.
+        id: cache-ansible
+        uses: actions/cache@v3
+        with:
+          path: /usr/local/lib/python*/dist-packages/ansible*
+          key: ${{ hashFiles('infrastructure-playbook/requirements.txt') }}
+      - name: Install Ansible (fast when an existing installation was already cached).
+        working-directory: 'infrastructure-playbook'
+        run: |
+          # Install an Ansible version compatible with the version of
+          # ansible-core specified in requirements.txt for the
+          # infrastructure-playbook repo.
+          ANSIBLE_CORE_REQ=$(perl -pe 's/\\\n/ /' requirements.txt | grep ansible-core)
+          pip3 install --use-feature=fast-deps ansible "$ANSIBLE_CORE_REQ"
+
       # Total Perspective Vortex needs the Galaxy logic, which should be
       # installed automatically when running `pip3 install
       # total-perspective-vortex[cli]` (the `galaxy-app` package).
@@ -37,15 +53,7 @@ jobs:
       # - Ideally the version of Galaxy should exactly match the one running on
       #   usegalaxy.eu.
       # Therefore, we clone Galaxy and add it to the PYTHONPATH.
-      - name: Install Ansible.
-        working-directory: 'infrastructure-playbook'
-        run: |
-          # Install an Ansible version compatible with the version of
-          # ansible-core specified in requirements.txt for the
-          # infrastructure-playbook repo.
-          ANSIBLE_CORE_REQ=$(perl -pe 's/\\\n/ /' requirements.txt | grep ansible-core)
-          pip3 install ansible "$ANSIBLE_CORE_REQ"
-      - name: Clone Galaxy.
+      - name: Get Galaxy repo and commit id.
         working-directory: 'infrastructure-playbook'
         run: |
           # Get the Galaxy repository URL and commit from Ansible variables.
@@ -58,19 +66,33 @@ jobs:
           export GALAXY_COMMIT_ID=$(cat ${TMP_FILE} | jq -r .galaxy_commit_id)
           export GALAXY_REPO=$(cat ${TMP_FILE} | jq -r .galaxy_repo)
           rm ${TMP_FILE}
-          # git clone -b $GALAXY_COMMIT_ID --single-branch --depth=1 $GALAXY_REPO ../galaxy  # does not work with commit hashes
-          CLONE_DIR=../galaxy && git clone $GALAXY_REPO $CLONE_DIR && cd $CLONE_DIR && git checkout $GALAXY_COMMIT_ID
+          echo $GALAXY_COMMIT_ID > ../galaxy_commit_id
+          echo $GALAXY_REPO > ../galaxy_repo
+      - name: Cache Galaxy
+        id: cache-galaxy
+        uses: actions/cache@v3
+        with:
+          path: galaxy
+          key: ${{ hashFiles('galaxy_repo') }}-${{ hashFiles('galaxy_commit_id') }}
+      - name: Clone Galaxy      
+        if: ${{ steps.cache-galaxy.outputs.cache-hit != 'true' }}
+        run: |
+          export GALAXY_COMMIT_ID="$(cat ./galaxy_commit_id)"
+          export GALAXY_REPO="$(cat ./galaxy_repo)"
+          # git clone -b $GALAXY_COMMIT_ID --single-branch --depth=1 $GALAXY_REPO galaxy  # does not work with commit hashes
+          git clone $GALAXY_REPO galaxy && cd galaxy && git checkout $GALAXY_COMMIT_ID
       - name: Install Galaxy requirements.
         working-directory: 'galaxy'
         run: pip install -r requirements.txt
 
       # Install the Total Perspective Vortex version that should be running on
       # usegalaxy.eu
-      - name: Install Total Perspective Vortex
+      - name: Install Total Perspective Vortex.
         working-directory: 'galaxy'
         run: |
           TPV_REQ=$(perl -pe 's/\\\n/ /' lib/galaxy/dependencies/conditional-requirements.txt | grep total-perspective-vortex)
           pip3 install --upgrade "$TPV_REQ"
+
       - name: Run Total Perspective Vortex linter.
         run: |
           export PYTHONPATH=$(realpath ./galaxy/lib)
