--- a/.github/workflows/tpv.yml
+++ b/.github/workflows/tpv.yml
@@ -32,7 +32,14 @@ jobs:
       - name: Link /usr/local/lib.
         run: ln -s /usr/local/lib lib
       - name: Echo contents of Python dir.
-        run: python -m site
+        run: |
+          pip3 install rdflib
+          python -m site
+          tree /home/runner/work/usegalaxy-eu-ansible/usegalaxy-eu-ansible
+          tree /opt/hostedtoolcache/Python/3.11.3/x64/lib/python3.11/site-packages
+          tree /home/runner/.local/lib/python3.11/site-packages
+          tree /opt/hostedtoolcache/Python/3.11.3/x64/lib/python3.11
+          tree /opt/hostedtoolcache/Python/3.11.3/x64/lib/python3.11/lib-dynload
       - name: Cache Ansible.
         id: cache-ansible
         uses: actions/cache@v3
